--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,7 +1,7 @@
 // Import CSS from "node_modules" and "bower_components"
 // thanks to Stylus' "import css" and "paths" options
 @import 'prism/themes/prism-okaidia.css'
-// Check out "bower_components/prism/themes/" for available themes
+@import 'font-awesome/css/font-awesome.css'
 
 // New to Stylus? Check out http://learnboost.github.io/stylus
 // Use modern CSS thanks to Autoprefixer: https://github.com/ai/autoprefixer
@@ -235,3 +235,19 @@ a
 
   img
     height: 10px;
+
+quote
+  text-align: left
+
+  i
+    display: block
+
+  .text
+    width: 75%
+
+  .fa-quote-left
+    margin-right: 20px
+    float: left
+
+  a
+    float: right
