--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -160,6 +160,14 @@ bullet_transition_translate_x = 16px
 .emphatic .bespoke-slide
   background: slide_background
 
+.main-slide
+  color: white
+  background-image: url("../images/pipes.jpg")
+  background-size: cover
+
+  .bespoke-slide
+    background: rgba(0,0,0,0.3)
+
 .letters
 
   .letter-box
