--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -2,6 +2,7 @@
 // thanks to Stylus' "import css" and "paths" options
 @import 'prism/themes/prism-okaidia.css'
 @import 'font-awesome/css/font-awesome.css'
+@import 'fira/fira.css'
 
 // New to Stylus? Check out http://learnboost.github.io/stylus
 // Use modern CSS thanks to Autoprefixer: https://github.com/ai/autoprefixer
@@ -189,7 +190,7 @@ pre
 // content styles
 
 body
-  font-family: helvetica, arial, sans-serif
+  font-family: 'Fira Sans', helvetica, arial, sans-serif
   font-size: 18px
   color: #404040
 
