Added a link to graft.

--- a/src/index.jade
+++ b/src/index.jade
@@ -333,6 +333,8 @@ html
 
       section
         h2 Graft and jsChan Team
+        h3
+          a(href="http://github.com/GraftJS/graft") http://github.com/GraftJS/graft
         ul.bullet
           li Adrian Roussow
           li Peter Elger
